Banner block has been added

--- a/source/styles/index.scss
+++ b/source/styles/index.scss
@@ -1,4 +1,6 @@
 @import "variables.scss";
 @import "fonts.scss";
 @import "common.scss";
+@import "blocks/action-button.scss";
 @import "blocks/header.scss";
+@import "blocks/banner.scss";
