--- a/source/styles/variables.scss
+++ b/source/styles/variables.scss
@@ -11,7 +11,14 @@ $duration: 0.5s;
   --color-background-custom: #FED100;
   --color-background-custom-focus: #D8B61F;
 
+  --color-font-light: #F2F2F2;
+  --color-font-dark: #333333;
+
   --color-gray: #808080;
   --color-gray-2: #675D5D;
   --color-dark: #333333;
+  --color-red: #FF352B;
+  --color-white: #FFFFFF;
+  --color-blue: #3D9BE9;
+  --color-blue-o30: rgba(61, 155, 233, 0.3);
 }
