--- a/source/styles/blocks/header.scss
+++ b/source/styles/blocks/header.scss
@@ -1,4 +1,4 @@
-$nav-offset: 20px;
+$nav-offset: 16px;
 
 .header {
   position: relative;
@@ -7,7 +7,7 @@ $nav-offset: 20px;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  padding: 25px $offset $nav-offset;
+  padding: 27px $offset $nav-offset;
 
   background-color: var(--color-background-custom, yellow);
 }
@@ -22,7 +22,7 @@ $nav-offset: 20px;
 
   display: block;
   width: 100%;
-  height: 67px;
+  height: 65px;
 
   background-color: var(--color-background-custom, yellow);
 }
@@ -158,7 +158,7 @@ $nav-offset: 20px;
   width: 100%;
   padding: 10px;
 
-  color: var(--color-dark, black);
+  color: var(--color-font-dark, black);
   font-weight: 500;
   font-size: 18px;
   line-height: 22px;
@@ -168,12 +168,14 @@ $nav-offset: 20px;
   outline: none;
 }
 
+.header__nav-link:hover,
 .header__nav-link:focus {
+  color: var(--color-white, white);
+
   background-color: var(--color-background-custom-focus, lightgray);
 }
 
 .header__nav-link:hover {
-  color: var(--color-gray, gray);
   text-decoration: underline;
 }
 
@@ -223,9 +225,8 @@ $nav-offset: 20px;
     width: auto;
   }
 
+  .header__nav-link:hover,
   .header__nav-link:focus {
-    color: var(--color-gray, gray);
-
     background-color: var(--color-background-custom, yellow);
   }
 
@@ -233,7 +234,7 @@ $nav-offset: 20px;
     display: block;
     flex-shrink: 0;
 
-    color: var(--color-dark, black);
+    color: var(--color-font-dark, black);
     font-weight: 500;
     font-size: 18px;
     line-height: 22px;
@@ -243,11 +244,11 @@ $nav-offset: 20px;
   }
 
   .header__telephone:focus {
-    color: var(--color-gray, gray);
+    color: var(--color-white, white);
   }
 
   .header__telephone:hover {
-    color: var(--color-gray, gray);
+    color: var(--color-white, white);
     text-decoration: none;
   }
 
@@ -258,7 +259,7 @@ $nav-offset: 20px;
 
 @media (min-width: $desktop) {
   .header {
-    padding: 41px calc((50% - #{$desktop} / 2) + #{$offset}) 20px;
+    padding: 40px calc((50% - #{$desktop} / 2) + #{$offset}) 20px;
   }
 
   .header__nav-list {
