--- a/source/styles/common.scss
+++ b/source/styles/common.scss
@@ -12,7 +12,7 @@ body {
   line-height: 21px;
 
   cursor: default;
-  background-color: var(--color-background, white);
+  background-color: var(--color-white, white);
 }
 
 img {
