--- a/source/styles/index.scss
+++ b/source/styles/index.scss
@@ -4,3 +4,4 @@
 @import "blocks/action-button.scss";
 @import "blocks/header.scss";
 @import "blocks/banner.scss";
+@import "blocks/description.scss";
