--- a/source/styles/blocks/header.scss
+++ b/source/styles/blocks/header.scss
@@ -9,7 +9,7 @@ $nav-offset: 16px;
   align-items: center;
   padding: 27px $offset $nav-offset;
 
-  background-color: var(--color-background-custom, yellow);
+  background-color: var(--color-yellow, yellow);
 }
 
 .header::before {
@@ -24,7 +24,7 @@ $nav-offset: 16px;
   width: 100%;
   height: 65px;
 
-  background-color: var(--color-background-custom, yellow);
+  background-color: var(--color-yellow, yellow);
 }
 
 .header__logo {
@@ -172,7 +172,7 @@ $nav-offset: 16px;
 .header__nav-link:focus {
   color: var(--color-white, white);
 
-  background-color: var(--color-background-custom-focus, lightgray);
+  background-color: var(--color-yellow-2, lightgray);
 }
 
 .header__nav-link:hover {
@@ -227,7 +227,7 @@ $nav-offset: 16px;
 
   .header__nav-link:hover,
   .header__nav-link:focus {
-    background-color: var(--color-background-custom, yellow);
+    background-color: var(--color-yellow, yellow);
   }
 
   .header__telephone {
