Cost block has been added

--- a/source/styles/index.scss
+++ b/source/styles/index.scss
@@ -2,6 +2,8 @@
 @import "fonts.scss";
 @import "common.scss";
 @import "blocks/action-button.scss";
+@import "blocks/order-button.scss";
 @import "blocks/header.scss";
 @import "blocks/banner.scss";
 @import "blocks/description.scss";
+@import "blocks/cost.scss";
