--- a/source/styles/variables.scss
+++ b/source/styles/variables.scss
@@ -12,9 +12,11 @@ $duration: 0.5s;
 
   --color-gray: #808080;
   --color-gray-2: #675D5D;
+  --color-gray-3: #EBEBEB;
   --color-dark: #333333;
   --color-red: #FF352B;
   --color-white: #FFFFFF;
+  --color-white-2: #F8FBFF;
   --color-blue: #3D9BE9;
   --color-blue-o30: rgba(61, 155, 233, 0.3);
   --color-yellow: #FED100;
