Autopark block has been added

--- a/source/styles/blocks/banner.scss
+++ b/source/styles/blocks/banner.scss
@@ -177,7 +177,7 @@
     height: 300px;
     margin-left: 207px;
 
-    background-image: url("../img/truck.png");
+    background-image: url("../img/wagon.png");
     filter: blur(3px);
   }
 
