--- a/source/styles/index.scss
+++ b/source/styles/index.scss
@@ -4,6 +4,8 @@
 @import "blocks/action-button.scss";
 @import "blocks/order-button.scss";
 @import "blocks/header.scss";
+@import "blocks/main.scss";
 @import "blocks/banner.scss";
 @import "blocks/description.scss";
 @import "blocks/cost.scss";
+@import "blocks/autopark.scss";
