--- a/source/styles/common.scss
+++ b/source/styles/common.scss
@@ -23,6 +23,7 @@ img {
 
 a {
   color: inherit;
+  font-family: inherit;
   text-decoration: none;
 }
 
@@ -31,9 +32,17 @@ a:not([href]) {
 }
 
 button {
+  font-family: inherit;
+
   cursor: pointer;
 }
 
+p {
+  margin: 0;
+  padding: 0;
+
+  font-family: inherit;
+}
 
 /*
   Classes
