--- a/source/styles/blocks/order-button.scss
+++ b/source/styles/blocks/order-button.scss
@@ -1,17 +1,8 @@
 .order-button {
-  box-sizing: border-box;
-  display: flex;
-  justify-content: center;
-  max-width: 100%;
-  padding: 18px;
-
-  color: var(--color-dark, black);
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 24px;
-
-  background-color: var(--color-yellow, yellow);
-  outline: none;
+  @include custom-button(
+    var(--color-dark, black),
+    var(--color-yellow, yellow)
+  );
 }
 
 .order-button:hover,
