--- a/source/styles/index.scss
+++ b/source/styles/index.scss
@@ -1,5 +1,6 @@
 @import "variables.scss";
 @import "fonts.scss";
+@import "mixins.scss";
 @import "common.scss";
 @import "blocks/action-button.scss";
 @import "blocks/order-button.scss";
