--- a/source/styles/blocks/autopark.scss
+++ b/source/styles/blocks/autopark.scss
@@ -68,16 +68,42 @@
   opacity: 0.5;
 }
 
-.autopark__slider-wrapper {
-  display: none;
+.autopark__sliders-list {
+  display: grid;
+  grid-template-columns: 100%;
 
-  &--active {
-    display: flex;
-    flex-direction: column;
-  }
+  overflow: hidden;
 
   &--no-js {
-    display: flex;
+    display: block;
+  }
+}
+
+.autopark__slider-wrapper {
+  position: relative;
+  z-index: -1;
+
+  grid-column: 1;
+  grid-row: 1;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+
+  opacity: 0;
+  overflow: hidden;
+  visibility: hidden;
+
+  transform: translateX(-100vw);
+
+  &--active,
+  &--no-js {
+    position: relative;
+    z-index: 1;
+
+    opacity: 1;
+    visibility: visible;
+
+    transform: translateX(0);
   }
 }
 
@@ -88,7 +114,9 @@
 .autopark__slider {
   display: grid;
   grid-template-columns: 100%;
-  margin: 0 auto;
+  margin: auto auto 0;
+
+  overflow: hidden;
 
   &--no-js {
     display: block;
@@ -96,18 +124,33 @@
 }
 
 .autopark__slide {
+  position: relative;
+  z-index: -1;
+
   grid-row: 1;
   grid-column: 1;
-  display: none;
+  display: flex;
+  flex-direction: column;
+  margin: 37px 0 0;
 
-  &--active {
-    display: block;
-    margin: 37px 0 0;
-  }
+  opacity: 0;
+  visibility: hidden;
 
+  &--active,
   &--no-js {
-    display: block;
+    position: relative;
+    z-index: 1;
+
+    opacity: 1;
+    visibility: visible;
   }
+}
+
+.autopark__offer {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  margin: auto 0 0;
 }
 
 .autopark__offer-title {
@@ -118,9 +161,19 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 100%;
+  max-width: 641px;
+  height: 100%;
+  max-height: 453px;
   margin: 0;
 
   overflow: hidden;
+}
+
+.autopark__offer-img-wrapper img {
+  display: block;
+  width: auto;
+  max-height: 100%;
 }
 
 .autopark__offer-features-list {
@@ -283,9 +336,10 @@
   }
 
   .autopark__slider-wrapper {
+    display: flex;
+    flex-direction: row;
+
     &--active {
-      display: flex;
-      flex-direction: row;
       justify-content: space-between;
       max-width: 1274px;
       margin: 0 auto;
@@ -335,6 +389,12 @@
     opacity: 0.5;
   }
 
+  .autopark__slider {
+    width: 100%;
+    max-width: 1016px;
+    margin: 0 auto;
+  }
+
   .autopark__slide {
     &--active {
       margin: 0;
@@ -342,20 +402,24 @@
   }
 
   .autopark__offer {
+    flex-grow: 1;
     display: grid;
-    column-gap: 30px;
+    column-gap: 15%;
     grid-template-columns: 250px 1fr;
+    grid-template-rows: repeat(3, auto) 1fr;
     grid-template-areas:
       "title img"
       "features img"
       "button img"
       ". img";
+    align-items: center;
+    margin: 0 auto;
   }
 
   .autopark__offer-title {
     grid-area: title;
     display: block;
-    margin: 10px 0 0;
+    margin: 50px 0 0;
   }
 
   .autopark__offer-img-wrapper {
@@ -406,7 +470,7 @@
 
 @media (min-width: $desktop) {
   .autopark {
-    padding: $offset calc((50% - #{$desktop} / 2) + #{$offset}) 46px;
+    padding: $offset calc((50% - #{$desktop} / 2) + #{$offset}) 9px;
   }
 
   .autopark__offer {
@@ -414,8 +478,6 @@
   }
 
   .autopark__offer-title {
-    margin-top: 50px;
-
     font-weight: 600;
     font-size: 24px;
     line-height: 29px;
