--- a/source/markup/pug/blocks/autopark.pug
+++ b/source/markup/pug/blocks/autopark.pug
@@ -89,16 +89,11 @@
 mixin types-list()
   ul(class="autopark__types-list autopark__types-list--no-js list-reset")
     - for (let i = 0; i < types.length; i++)
-      - const isActive = i === 0;
       li(class="autopark__type")
         button(
-          class=`
-            autopark__type-button
-            ${isActive ? "autopark__type-button--active" : ""}
-          `
+          class="autopark__type-button"
           type="button"
           data-type=`${types[i].type}`
-          disabled= isActive ? true : false
         ).
           #{types[i].title}
 
@@ -106,11 +101,7 @@ mixin slides-list(type)
   ul(class="autopark__slider autopark__slider--no-js list-reset")
     - for (let i = 0; i < type.offers.length; i++)
       li(
-        class=`
-          autopark__slide
-          autopark__slide--no-js
-          ${i === 0 ? "autopark__slide--active" : ""}
-        `
+        class="autopark__slide autopark__slide--no-js"
         data-slide=`${type.type}-${i + 1}`
       )
         article(class="autopark__offer")
@@ -144,7 +135,7 @@ mixin slides-list(type)
               autopark__offer-order-button--no-js
               order-button
             `
-            href="#order"
+            href=`#order${type.offers[i].info}`
           ).
             Заказать
 
@@ -156,28 +147,19 @@ mixin slides-controls(type)
     `
   )
     - for (let i = 0; i < type.offers.length; i++)
-      - const isActive = i === 0;
       li(class="autopark__slide-button-wrapper")
         button(
-          class=`
-            autopark__slide-button
-            ${isActive ? "autopark__slide-button--active" : ""}
-          `
+          class="autopark__slide-button"
           type="button"
           aria-label=`Переключить на ${i + 1} слайд`
           data-slide=`${type.type}-${i + 1}`
-          disabled= isActive ? true : false
         )
 
 mixin sliders-list()
   ul(class="autopark__sliders-list autopark__sliders-list--no-js list-reset")
     - for (let i = 0; i < types.length; i++)
       li(
-        class=`
-          autopark__slider-wrapper
-          autopark__slider-wrapper--no-js
-          ${i === 0 ? "autopark__slider-wrapper--active" : ""}
-        `
+        class="autopark__slider-wrapper autopark__slider-wrapper--no-js"
         data-type=`${types[i].type}`
       )
         button(
