Styles for Reviews block have been added

--- a/source/markup/pug/blocks/cost.pug
+++ b/source/markup/pug/blocks/cost.pug
@@ -57,3 +57,9 @@ section(class="cost")
   p(class="cost__subtitle").
     Фиксированная стоимость на переезд под ключ
   +offers-list()
+  button(
+    class="cost__open-costs-button cost__open-costs-button--no-js"
+    type="button"
+    id="open-costs-buttons-js"
+  ).
+    Все цены
