--- a/source/styles/blocks/autopark.scss
+++ b/source/styles/blocks/autopark.scss
@@ -1,10 +1,10 @@
 .autopark {
   display: block;
-  padding: $offset $offset 45px;
+  padding: $offset $offset 43px;
 }
 
 .autopark__title {
-  margin: 48px 0 21px;
+  margin: 27px 0 21px;
 
   color: var(--color-dark, black);
   font-weight: 600;
@@ -182,7 +182,7 @@
 
 .autopark__offer-description {
   display: block;
-  margin: 31px 0 0;
+  margin: 32px 0 0;
 
   font-weight: 400;
   font-size: 12px;
@@ -259,10 +259,16 @@
 .autopark__slide-button:not(.autopark__slide-button--active):hover,
 .autopark__slide-button:not(.autopark__slide-button--active):focus {
   border-color: var(--color-red, red);
+  background-color: var(--color-yellow, yellow);
+}
+
+.autopark__slide-button:not(.autopark__slide-button--active):hover::after,
+.autopark__slide-button:not(.autopark__slide-button--active):focus::after {
+  background-color: var(--color-yellow, yellow);
 }
 
 .autopark__slide-button:not(.autopark__slide-button--active):hover::after {
-  background-color: var(--color-yellow, yellow);
+  background-color: var(--color-dark, black);
 }
 
 .autopark__slide-button:not(.autopark__slide-button--active):active {
