--- a/source/styles/index.scss
+++ b/source/styles/index.scss
@@ -4,9 +4,11 @@
 @import "common.scss";
 @import "blocks/action-button.scss";
 @import "blocks/order-button.scss";
+@import "blocks/call-button.scss";
 @import "blocks/header.scss";
 @import "blocks/main.scss";
 @import "blocks/banner.scss";
 @import "blocks/description.scss";
 @import "blocks/cost.scss";
 @import "blocks/autopark.scss";
+@import "blocks/reviews.scss";
