Script for reviews block have been added

--- a/source/markup/pug/blocks/reviews.pug
+++ b/source/markup/pug/blocks/reviews.pug
@@ -28,10 +28,10 @@
       name: `Ольга Петрова`,
       date: `11.11.2019`,
       rate: `5`,
-      text: `Могу на 100% порекомендовать компанию MOVEE и отметить,
-              что цены фиксированы, что упрощает расчет. Безо всяких заморочек,
-              в отличии от их конкурентов. Упаковали все качественно и быстро.
-              Все вещи приехали в сохранности. Особлая благодарность Александру
+      text: `Могу на 100% порекомендовать компанию MOVEE и отметить, что цены
+              фиксированы, что упрощает расчет. Безо всяких заморочек, в отличии
+              от их конкурентов. Упаковали все качественно и быстро. Все вещи
+              приехали в сохранности. Особлая благодарность Александру
               за его профессионализм.`,
       visibility: false,
     },
@@ -68,7 +68,7 @@ mixin reviews-list()
                 alt=i
               )
           p(class="reviews__review-text").
-            !{review.text}
+            #{review.text}
         button(
           class="reviews__item-open-button reviews__item-open-button--no-js"
           type="button"
