--- a/source/styles/index.scss
+++ b/source/styles/index.scss
@@ -13,3 +13,4 @@
 @import "blocks/autopark.scss";
 @import "blocks/reviews.scss";
 @import "blocks/callback.scss";
+@import "blocks/placement.scss";
