--- a/source/markup/pug/pages/index.pug
+++ b/source/markup/pug/pages/index.pug
@@ -8,5 +8,5 @@ html(lang="ru")
   body
     include ../blocks/header
     include ../blocks/main
-    footer
+    include ../blocks/footer
     script(src="js/app.min.js")
