--- a/source/styles/index.scss
+++ b/source/styles/index.scss
@@ -5,6 +5,7 @@
 @import "blocks/action-button.scss";
 @import "blocks/order-button.scss";
 @import "blocks/call-button.scss";
+@import "blocks/social-list.scss";
 @import "blocks/header.scss";
 @import "blocks/main.scss";
 @import "blocks/banner.scss";
@@ -14,3 +15,4 @@
 @import "blocks/reviews.scss";
 @import "blocks/callback.scss";
 @import "blocks/placement.scss";
+@import "blocks/footer.scss";
