--- a/source/markup/pug/blocks/cost.pug
+++ b/source/markup/pug/blocks/cost.pug
@@ -1,53 +1,27 @@
--
-  const offers = [
-    {
-      title: "1-комнатная кв-ра",
-      vehicles: "1 фургон",
-      humans: "2 грузчика",
-      time: "Переезд за 4 часа",
-      cost: "8 490₽",
-      highlight: false
-    },
-    {
-      title: "2-комнатная кв-ра",
-      vehicles: "1 газель - 3 метра",
-      humans: "2 грузчика",
-      time: "Переезд за 4 часа",
-      cost: "10 990₽",
-      highlight: true
-    },
-    {
-      title: "3-комнатная кв-ра",
-      vehicles: "1 газель - 4 метра",
-      humans: "2 грузчика",
-      time: "Переезд за 6 часа",
-      cost: "16 490₽",
-      highlight: false
-    },
-  ];
+//- places задано в offers.json
 
 mixin offers-list()
   ul(class="cost__offers-list list-reset")
-    - for (let i = 0; i < offers.length; i++)
+    - for (let i = 0; i < places.length; i++)
       li(
         class=`
           cost__offer-wrapper
           cost__offer-wrapper--no-js
-          ${offers[i].highlight ? "cost__offer-wrapper--active" : ""}
+          ${places[i].highlight ? "cost__offer-wrapper--active" : ""}
         `
       )
         article(class="cost__offer")
           h3(class="cost__offer-title").
-            #{offers[i].title}
+            #{places[i].title}
           ul(class="cost__offer-features-list list-reset")
             li(class="cost__offer-feature").
-              #{offers[i].vehicles}
+              #{places[i].vehicles}
             li(class="cost__offer-feature").
-              #{offers[i].humans}
+              #{places[i].humans}
             li(class="cost__offer-feature").
-              #{offers[i].time}
+              #{places[i].time}
           p(class="cost__offer-price").
-            #{offers[i].cost}
+            #{places[i].cost}
           a(class="cost__offer-order-button order-button" href="#order").
             Заказать
 
